<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.3</version>
        <relativePath/>
    </parent>

    <groupId>com.dmvmotor</groupId>
    <artifactId>api</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>dmv-motor-api</name>
    <description>DMV Motor API</description>

    <properties>
        <java.version>21</java.version>
        <!--
          jOOQ codegen connects to local Postgres (Docker container dmv-motor-postgres).
          Codegen is OFF by default; opt in with `mvn -Pjooq-gen generate-sources`
          after schema changes, then commit the regenerated sources under
          src/main/java/com/dmvmotor/api/infrastructure/jooq/generated/.
          Override connection via -Djooq.codegen.url=... if needed.
        -->
        <jooq.codegen.url>jdbc:postgresql://localhost:5432/dmv_motor</jooq.codegen.url>
        <jooq.codegen.username>dmv_motor</jooq.codegen.username>
        <jooq.codegen.password>dmv_motor</jooq.codegen.password>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jooq</artifactId>
        </dependency>

        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Firebase Admin SDK: verifies ID tokens offline via cached Google public keys. -->
        <dependency>
            <groupId>com.google.firebase</groupId>
            <artifactId>firebase-admin</artifactId>
            <version>9.4.3</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-testcontainers</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- RestAssured for E2E / IT tests -->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- MockWebServer for DeepSeek provider unit tests (Phase B1 Java). -->
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>mockwebserver</artifactId>
            <version>4.12.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.12</version>
                <configuration>
                    <excludes>
                        <!-- Generated jOOQ classes — not hand-written, not tested directly -->
                        <exclude>com/dmvmotor/api/infrastructure/jooq/generated/**</exclude>
                        <!-- Spring Boot entry point — no business logic -->
                        <exclude>com/dmvmotor/api/ApiApplication.class</exclude>
                        <!-- Prod-only Firebase beans — require live Google creds, exercised via manual smoke test -->
                        <exclude>com/dmvmotor/api/authaccess/auth/FirebaseConfig.class</exclude>
                        <exclude>com/dmvmotor/api/authaccess/auth/FirebaseIdTokenVerifier.class</exclude>
                        <!-- Out-of-band CLI for AI question generation — exercised manually, not in CI -->
                        <exclude>com/dmvmotor/api/aiqgen/cli/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals><goal>prepare-agent</goal></goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals><goal>report</goal></goals>
                    </execution>
                    <execution>
                        <id>check</id>
                        <phase>test</phase>
                        <goals><goal>check</goal></goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>INSTRUCTION</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.90</minimum>
                                        </limit>
                                        <limit>
                                            <counter>BRANCH</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.90</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Failsafe runs *IT.java during verify phase against local Docker DB -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/*IT.java</include>
                    </includes>
                    <systemPropertyVariables>
                        <spring.profiles.active>it</spring.profiles.active>
                    </systemPropertyVariables>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!--
      jOOQ code generation is opt-in via profile (not part of default build).
      Generated sources are checked into src/main/java/com/dmvmotor/api/infrastructure/jooq/generated/
      so that CI and Docker image builds don't need a live database.

      To regenerate after a schema change:
        1. Start local Postgres (Docker container dmv-motor-postgres must be running)
        2. Start the app once to apply Flyway migrations (or run Flyway manually)
        3. mvn -Pjooq-gen generate-sources
        4. git add src/main/java/com/dmvmotor/api/infrastructure/jooq/generated && commit
    -->
    <profiles>
        <profile>
            <id>jooq-gen</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jooq</groupId>
                        <artifactId>jooq-codegen-maven</artifactId>
                        <executions>
                            <execution>
                                <id>jooq-codegen</id>
                                <phase>generate-sources</phase>
                                <goals>
                                    <goal>generate</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <jdbc>
                                <driver>org.postgresql.Driver</driver>
                                <url>${jooq.codegen.url}</url>
                                <user>${jooq.codegen.username}</user>
                                <password>${jooq.codegen.password}</password>
                            </jdbc>
                            <generator>
                                <database>
                                    <name>org.jooq.meta.postgres.PostgresDatabase</name>
                                    <inputSchema>public</inputSchema>
                                    <includes>.*</includes>
                                    <excludes>flyway_schema_history</excludes>
                                </database>
                                <target>
                                    <packageName>com.dmvmotor.api.infrastructure.jooq.generated</packageName>
                                    <directory>src/main/java</directory>
                                </target>
                            </generator>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
